syntax = "proto3";

option go_package = "proto/follower";


message FollowerDto {
  int64 id = 1;
}

service FollowerService {
  rpc WriteUserRpc (WriteUserRequest) returns (Empty) {}
  rpc FindByIdRpc (FindByIdRequest) returns (FindByIdResponse) {}
  rpc CreateFollowConnectionRpc (CreateFollowConnectionRequest) returns (Empty) {}
  rpc GetFollowsRpc (GetFollowsRequest) returns (FollowsResponse) {}
  rpc GetFollowersRpc (GetFollowersRequest) returns (FollowersResponse) {}
  rpc GetSuggestionsForUserRpc (GetSuggestionsRequest) returns (SuggestionsResponse) {}
  rpc CheckIfFollowingConnectionExistRpc (CheckIfFollowingConnectionExistRequest) returns (CheckResponse) {}
  rpc DeleteFollowConnectionRpc (DeleteFollowConnectionRequest) returns (Empty) {}
}

// Poruke zahteva i odgovora
message WriteUserRequest{
  FollowerDto userDto = 1;
}

message FindByIdResponse{
  FollowerDto userDto = 1;
}

message Followers{
  int64 followingId = 1;
  int64 followedId = 2;
}


message Empty {}
message FindByIdRequest {
  int64 id = 1;
}

message CreateFollowConnectionRequest {
  int64 followingId = 1;
  int64 followedId = 2;
}

message GetFollowsRequest {
  int64 id = 1;
}
message GetFollowersRequest {
  int64 id = 1;
}
message GetSuggestionsRequest {
  int64 id = 1;
}
message CheckIfFollowingConnectionExistRequest {
  int64 following_id = 1;
  int64 followed_id = 2;
}
message FollowsResponse {
  repeated int64 follows = 1;
}
message FollowersResponse {
  repeated int64 followers = 1;
}
message SuggestionsResponse {
  repeated int64 suggestions = 1;
}
message CheckResponse {
  bool exists = 1;
}

message DeleteFollowConnectionRequest {
    int64 following_id = 1;
    int64 followed_id = 2;
  }